2010-05-21 Philipp Klaus Krause <pkk AT spth.de>
	* src/mcs51/gen.c,
	  src/z80/gen.c,
	  src/hc08/gen.c,
	  src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  Completed fix for #1875933 applying #2892763.

2010-05-21 Philipp Klaus Krause <pkk AT spth.de>
	* src/SDCCopt.c,
	  src/z80/gen.c,
	  support/regression/tests/memory.c:
	  Fixed bug #2995398.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  A tiny step toward implementing #1921061.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvements.

2010-05-13 Borut Razem <borut.razem AT siol.net>

	* sdas/asxxsrc/asmain.c: fixed bug #2914707: as-z80 segmentation fault

2010-05-10 Borut Razem <borut.razem AT siol.net>

	* src/Makefile.in: added -Wall
	* sdas/linksrc/lkarea.c: fixed bug #2999446: ds390 xram limit at 0x400000
	* asxxsrc/asmain.c: fixed compiler warning

2010-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/cpp/sdcpp.dsp: added sdcpp-diagnostic.c

2010-05-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strtok.c: cosmetic changes
	* sdas/linksrc/aslink.dsp: removed lkgb.c
	* src/SDCCast.c (gatherImplicitVariables): fixed bug 2956580, const iTemp
	* src/z80/peeph-gbz80.def (rule 16): fixed non-existent operandsNotSame bug
	* support/regression/tests/bug2956580.c: new, added

2010-05-05 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp.opt: fixed bug #2996806: Werror broken

2010-05-04 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: fixed compiler warnings

2010-05-03 Borut Razem <borut.razem AT siol.net>

	* support/cpp/Makefile.in, support/cpp/sdcpp-diagnostic.c,
	  support/cpp/sdcpp.h, support/cpp/sdcpp-opts.c:
	  added c_cpp_error diagnostic callback function

2010-05-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F330.h,
	* device/include/mcs51/C8051F336.h,
	* device/include/mcs51/C8051F350.h,
	* device/include/mcs51/C8051F410.h,